parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression DISJUNCTION expression
Rule 2     expression -> expression CONJUNCTION expression
Rule 3     expression -> NEGATION expression
Rule 4     expression -> expression LESS_THAN expression
Rule 5     expression -> expression LESS_THAN_EQUAL expression
Rule 6     expression -> expression NOT_EQUAL expression
Rule 7     expression -> expression GREATER_THAN expression
Rule 8     expression -> expression GREATER_THAN_EQUAL expression
Rule 9     expression -> expression EQUAL expression
Rule 10    expression -> expression CONS expression
Rule 11    expression -> expression MEMBERSHIP expression
Rule 12    expression -> expression ADDITION expression
Rule 13    expression -> expression SUBTRACTION expression
Rule 14    expression -> expression MULTIPLICATION expression
Rule 15    expression -> expression DIVISION expression
Rule 16    expression -> expression INTEGER_DIVISION expression
Rule 17    expression -> expression EXPONENTIATION expression
Rule 18    expression -> expression MODULUS expression
Rule 19    expression -> SUBTRACTION expression
Rule 20    arguments -> expression
Rule 21    arguments -> expression COMMA arguments
Rule 22    expression -> expression LEFT_BRACKET expression RIGHT_BRACKET
Rule 23    expression -> LEFT_BRACKET arguments RIGHT_BRACKET
Rule 24    args -> expression COMMA
Rule 25    args -> expression COMMA args
Rule 26    expression -> TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
Rule 27    expression -> LEFT_PARENTHESIS args RIGHT_PARENTHESIS
Rule 28    expression -> LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 29    expression -> REAL
Rule 30    expression -> INTEGER
Rule 31    expression -> STRING
Rule 32    expression -> TRUE
Rule 33    expression -> FALSE

Terminals, with rules where they appear

ADDITION             : 12
COMMA                : 21 24 25
CONJUNCTION          : 2
CONS                 : 10
DISJUNCTION          : 1
DIVISION             : 15
EQUAL                : 9
EXPONENTIATION       : 17
FALSE                : 33
GREATER_THAN         : 7
GREATER_THAN_EQUAL   : 8
INTEGER              : 30
INTEGER_DIVISION     : 16
LEFT_BRACKET         : 22 23
LEFT_PARENTHESIS     : 26 27 28
LESS_THAN            : 4
LESS_THAN_EQUAL      : 5
MEMBERSHIP           : 11
MODULUS              : 18
MULTIPLICATION       : 14
NEGATION             : 3
NOT_EQUAL            : 6
REAL                 : 29
RIGHT_BRACKET        : 22 23
RIGHT_PARENTHESIS    : 26 27 28
STRING               : 31
SUBTRACTION          : 13 19
TRUE                 : 32
TUPLE_INDEX          : 26
error                : 

Nonterminals, with rules where they appear

args                 : 25 26 27
arguments            : 21 23
expression           : 1 1 2 2 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 20 21 22 22 24 25 26 28 0

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .
    (1) expression -> expression . DISJUNCTION expression
    (2) expression -> expression . CONJUNCTION expression
    (4) expression -> expression . LESS_THAN expression
    (5) expression -> expression . LESS_THAN_EQUAL expression
    (6) expression -> expression . NOT_EQUAL expression
    (7) expression -> expression . GREATER_THAN expression
    (8) expression -> expression . GREATER_THAN_EQUAL expression
    (9) expression -> expression . EQUAL expression
    (10) expression -> expression . CONS expression
    (11) expression -> expression . MEMBERSHIP expression
    (12) expression -> expression . ADDITION expression
    (13) expression -> expression . SUBTRACTION expression
    (14) expression -> expression . MULTIPLICATION expression
    (15) expression -> expression . DIVISION expression
    (16) expression -> expression . INTEGER_DIVISION expression
    (17) expression -> expression . EXPONENTIATION expression
    (18) expression -> expression . MODULUS expression
    (22) expression -> expression . LEFT_BRACKET expression RIGHT_BRACKET

    DISJUNCTION     shift and go to state 12
    CONJUNCTION     shift and go to state 13
    LESS_THAN       shift and go to state 14
    LESS_THAN_EQUAL shift and go to state 15
    NOT_EQUAL       shift and go to state 16
    GREATER_THAN    shift and go to state 17
    GREATER_THAN_EQUAL shift and go to state 18
    EQUAL           shift and go to state 19
    CONS            shift and go to state 20
    MEMBERSHIP      shift and go to state 21
    ADDITION        shift and go to state 22
    SUBTRACTION     shift and go to state 23
    MULTIPLICATION  shift and go to state 24
    DIVISION        shift and go to state 25
    INTEGER_DIVISION shift and go to state 26
    EXPONENTIATION  shift and go to state 27
    MODULUS         shift and go to state 28
    LEFT_BRACKET    shift and go to state 29


state 2

    (3) expression -> NEGATION . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 30

state 3

    (19) expression -> SUBTRACTION . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 31

state 4

    (23) expression -> LEFT_BRACKET . arguments RIGHT_BRACKET
    (20) arguments -> . expression
    (21) arguments -> . expression COMMA arguments
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    arguments                      shift and go to state 32
    expression                     shift and go to state 33

state 5

    (26) expression -> TUPLE_INDEX . expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 34

state 6

    (27) expression -> LEFT_PARENTHESIS . args RIGHT_PARENTHESIS
    (28) expression -> LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS
    (24) args -> . expression COMMA
    (25) args -> . expression COMMA args
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    args                           shift and go to state 35
    expression                     shift and go to state 36

state 7

    (29) expression -> REAL .

    DISJUNCTION     reduce using rule 29 (expression -> REAL .)
    CONJUNCTION     reduce using rule 29 (expression -> REAL .)
    LESS_THAN       reduce using rule 29 (expression -> REAL .)
    LESS_THAN_EQUAL reduce using rule 29 (expression -> REAL .)
    NOT_EQUAL       reduce using rule 29 (expression -> REAL .)
    GREATER_THAN    reduce using rule 29 (expression -> REAL .)
    GREATER_THAN_EQUAL reduce using rule 29 (expression -> REAL .)
    EQUAL           reduce using rule 29 (expression -> REAL .)
    CONS            reduce using rule 29 (expression -> REAL .)
    MEMBERSHIP      reduce using rule 29 (expression -> REAL .)
    ADDITION        reduce using rule 29 (expression -> REAL .)
    SUBTRACTION     reduce using rule 29 (expression -> REAL .)
    MULTIPLICATION  reduce using rule 29 (expression -> REAL .)
    DIVISION        reduce using rule 29 (expression -> REAL .)
    INTEGER_DIVISION reduce using rule 29 (expression -> REAL .)
    EXPONENTIATION  reduce using rule 29 (expression -> REAL .)
    MODULUS         reduce using rule 29 (expression -> REAL .)
    LEFT_BRACKET    reduce using rule 29 (expression -> REAL .)
    $end            reduce using rule 29 (expression -> REAL .)
    COMMA           reduce using rule 29 (expression -> REAL .)
    RIGHT_BRACKET   reduce using rule 29 (expression -> REAL .)
    LEFT_PARENTHESIS reduce using rule 29 (expression -> REAL .)
    RIGHT_PARENTHESIS reduce using rule 29 (expression -> REAL .)


state 8

    (30) expression -> INTEGER .

    DISJUNCTION     reduce using rule 30 (expression -> INTEGER .)
    CONJUNCTION     reduce using rule 30 (expression -> INTEGER .)
    LESS_THAN       reduce using rule 30 (expression -> INTEGER .)
    LESS_THAN_EQUAL reduce using rule 30 (expression -> INTEGER .)
    NOT_EQUAL       reduce using rule 30 (expression -> INTEGER .)
    GREATER_THAN    reduce using rule 30 (expression -> INTEGER .)
    GREATER_THAN_EQUAL reduce using rule 30 (expression -> INTEGER .)
    EQUAL           reduce using rule 30 (expression -> INTEGER .)
    CONS            reduce using rule 30 (expression -> INTEGER .)
    MEMBERSHIP      reduce using rule 30 (expression -> INTEGER .)
    ADDITION        reduce using rule 30 (expression -> INTEGER .)
    SUBTRACTION     reduce using rule 30 (expression -> INTEGER .)
    MULTIPLICATION  reduce using rule 30 (expression -> INTEGER .)
    DIVISION        reduce using rule 30 (expression -> INTEGER .)
    INTEGER_DIVISION reduce using rule 30 (expression -> INTEGER .)
    EXPONENTIATION  reduce using rule 30 (expression -> INTEGER .)
    MODULUS         reduce using rule 30 (expression -> INTEGER .)
    LEFT_BRACKET    reduce using rule 30 (expression -> INTEGER .)
    $end            reduce using rule 30 (expression -> INTEGER .)
    COMMA           reduce using rule 30 (expression -> INTEGER .)
    RIGHT_BRACKET   reduce using rule 30 (expression -> INTEGER .)
    LEFT_PARENTHESIS reduce using rule 30 (expression -> INTEGER .)
    RIGHT_PARENTHESIS reduce using rule 30 (expression -> INTEGER .)


state 9

    (31) expression -> STRING .

    DISJUNCTION     reduce using rule 31 (expression -> STRING .)
    CONJUNCTION     reduce using rule 31 (expression -> STRING .)
    LESS_THAN       reduce using rule 31 (expression -> STRING .)
    LESS_THAN_EQUAL reduce using rule 31 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 31 (expression -> STRING .)
    GREATER_THAN    reduce using rule 31 (expression -> STRING .)
    GREATER_THAN_EQUAL reduce using rule 31 (expression -> STRING .)
    EQUAL           reduce using rule 31 (expression -> STRING .)
    CONS            reduce using rule 31 (expression -> STRING .)
    MEMBERSHIP      reduce using rule 31 (expression -> STRING .)
    ADDITION        reduce using rule 31 (expression -> STRING .)
    SUBTRACTION     reduce using rule 31 (expression -> STRING .)
    MULTIPLICATION  reduce using rule 31 (expression -> STRING .)
    DIVISION        reduce using rule 31 (expression -> STRING .)
    INTEGER_DIVISION reduce using rule 31 (expression -> STRING .)
    EXPONENTIATION  reduce using rule 31 (expression -> STRING .)
    MODULUS         reduce using rule 31 (expression -> STRING .)
    LEFT_BRACKET    reduce using rule 31 (expression -> STRING .)
    $end            reduce using rule 31 (expression -> STRING .)
    COMMA           reduce using rule 31 (expression -> STRING .)
    RIGHT_BRACKET   reduce using rule 31 (expression -> STRING .)
    LEFT_PARENTHESIS reduce using rule 31 (expression -> STRING .)
    RIGHT_PARENTHESIS reduce using rule 31 (expression -> STRING .)


state 10

    (32) expression -> TRUE .

    DISJUNCTION     reduce using rule 32 (expression -> TRUE .)
    CONJUNCTION     reduce using rule 32 (expression -> TRUE .)
    LESS_THAN       reduce using rule 32 (expression -> TRUE .)
    LESS_THAN_EQUAL reduce using rule 32 (expression -> TRUE .)
    NOT_EQUAL       reduce using rule 32 (expression -> TRUE .)
    GREATER_THAN    reduce using rule 32 (expression -> TRUE .)
    GREATER_THAN_EQUAL reduce using rule 32 (expression -> TRUE .)
    EQUAL           reduce using rule 32 (expression -> TRUE .)
    CONS            reduce using rule 32 (expression -> TRUE .)
    MEMBERSHIP      reduce using rule 32 (expression -> TRUE .)
    ADDITION        reduce using rule 32 (expression -> TRUE .)
    SUBTRACTION     reduce using rule 32 (expression -> TRUE .)
    MULTIPLICATION  reduce using rule 32 (expression -> TRUE .)
    DIVISION        reduce using rule 32 (expression -> TRUE .)
    INTEGER_DIVISION reduce using rule 32 (expression -> TRUE .)
    EXPONENTIATION  reduce using rule 32 (expression -> TRUE .)
    MODULUS         reduce using rule 32 (expression -> TRUE .)
    LEFT_BRACKET    reduce using rule 32 (expression -> TRUE .)
    $end            reduce using rule 32 (expression -> TRUE .)
    COMMA           reduce using rule 32 (expression -> TRUE .)
    RIGHT_BRACKET   reduce using rule 32 (expression -> TRUE .)
    LEFT_PARENTHESIS reduce using rule 32 (expression -> TRUE .)
    RIGHT_PARENTHESIS reduce using rule 32 (expression -> TRUE .)


state 11

    (33) expression -> FALSE .

    DISJUNCTION     reduce using rule 33 (expression -> FALSE .)
    CONJUNCTION     reduce using rule 33 (expression -> FALSE .)
    LESS_THAN       reduce using rule 33 (expression -> FALSE .)
    LESS_THAN_EQUAL reduce using rule 33 (expression -> FALSE .)
    NOT_EQUAL       reduce using rule 33 (expression -> FALSE .)
    GREATER_THAN    reduce using rule 33 (expression -> FALSE .)
    GREATER_THAN_EQUAL reduce using rule 33 (expression -> FALSE .)
    EQUAL           reduce using rule 33 (expression -> FALSE .)
    CONS            reduce using rule 33 (expression -> FALSE .)
    MEMBERSHIP      reduce using rule 33 (expression -> FALSE .)
    ADDITION        reduce using rule 33 (expression -> FALSE .)
    SUBTRACTION     reduce using rule 33 (expression -> FALSE .)
    MULTIPLICATION  reduce using rule 33 (expression -> FALSE .)
    DIVISION        reduce using rule 33 (expression -> FALSE .)
    INTEGER_DIVISION reduce using rule 33 (expression -> FALSE .)
    EXPONENTIATION  reduce using rule 33 (expression -> FALSE .)
    MODULUS         reduce using rule 33 (expression -> FALSE .)
    LEFT_BRACKET    reduce using rule 33 (expression -> FALSE .)
    $end            reduce using rule 33 (expression -> FALSE .)
    COMMA           reduce using rule 33 (expression -> FALSE .)
    RIGHT_BRACKET   reduce using rule 33 (expression -> FALSE .)
    LEFT_PARENTHESIS reduce using rule 33 (expression -> FALSE .)
    RIGHT_PARENTHESIS reduce using rule 33 (expression -> FALSE .)


state 12

    (1) expression -> expression DISJUNCTION . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 37

state 13

    (2) expression -> expression CONJUNCTION . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 38

state 14

    (4) expression -> expression LESS_THAN . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 39

state 15

    (5) expression -> expression LESS_THAN_EQUAL . expression
    (1) expression -> . expression DISJUNCTION expression
    (2) expression -> . expression CONJUNCTION expression
    (3) expression -> . NEGATION expression
    (4) expression -> . expression LESS_THAN expression
    (5) expression -> . expression LESS_THAN_EQUAL expression
    (6) expression -> . expression NOT_EQUAL expression
    (7) expression -> . expression GREATER_THAN expression
    (8) expression -> . expression GREATER_THAN_EQUAL expression
    (9) expression -> . expression EQUAL expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression MEMBERSHIP expression
    (12) expression -> . expression ADDITION expression
    (13) expression -> . expression SUBTRACTION expression
    (14) expression -> . expression MULTIPLICATION expression
    (15) expression -> . expression DIVISION expression
    (16) expression -> . expression INTEGER_DIVISION expression
    (17) expression -> . expression EXPONENTIATION expression
    (18) expression -> . expression MODULUS expression
    (19) expression -> . SUBTRACTION expression
    (22) expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (23) expression -> . LEFT_BRACKET arguments RIGHT_BRACKET
    (26) expression -> . TUPLE_INDEX expression LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (27) expression -> . LEFT_PARENTHESIS args RIGHT_PARENTHESIS
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . REAL
    (30) expression -> . INTEGER
    (31) expression -> . STRING
    (32) expression -> . TRUE
    (33) expression -> . FALSE

    NEGATION        shift and go to state 2
    SUBTRACTION     shift and go to state 3
    LEFT_BRACKET    shift and go to state 4
    TUPLE_INDEX     shift and go to state 5
    LEFT_PARENTHESIS shift and go to state 6
    REAL            shift and go to state 7
    INTEGER         shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 40

state 16
